# redis_browser

./: .gitignore  LICENSE.txt  Pipfile  README.md  pyproject.toml  pytest.ini  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: tests.yml
examples/: example1.py
redis_browser/: __init__.py  redis_browser.py
redisbrowser/: redisbrowser.py
tests/: test_redisbrowser.py
