[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.mypy]
strict_optional = false
no_implicit_optional = true

[tool.pytest.ini_options]
addopts = "--cov=redis_browser"
testpaths = [
    "tests",
]
redis_exec = "redis-server"
redis_host = "localhost"
redis_port = "6379"
redis_decode = "True"
