[metadata]
name = redis_browser
url = https://github.com/hera9191
description = Redis keys browser
long_description = file: README.md
version = 0.0.1
author = Petr Haering
author_email = petr.haering@gmail.com
license = MIT
platforms = linux
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = redis_browser
install_requires =
    redis

[options.entry_points]
console_scripts =
    redis-browser = redis_browser.redis_browser:redis_browser_cli